--- a/app/assets/stylesheets/components/buttons.scss
+++ b/app/assets/stylesheets/components/buttons.scss
@@ -13,8 +13,7 @@ button{
     width: 100%;
     margin: 0 !important;
     padding: 0 !important;
-    background-color: red !important;
-    height: 0 !important;
+    background-color: transparent !important;
     border: 0 !important;
     .social-app-button{
         padding: .4rem;
