--- a/app/assets/stylesheets/components/sign_in.scss
+++ b/app/assets/stylesheets/components/sign_in.scss
@@ -86,7 +86,7 @@
             font-weight: 500 !important;
         }
         .line{
-            height: .03rem;
+            height: 1px;
             width: 100%;
             background-color: var(--divide-color);
         }
