--- a/app/views/profile/settings.html.haml
+++ b/app/views/profile/settings.html.haml
@@ -10,8 +10,10 @@
         =t('settings.pass_and_auth')
       %button#v-pills-settings-tab.nav-link{"aria-controls" => "v-pills-settings", "aria-selected" => "false", "data-bs-target" => "#v-pills-settings", "data-bs-toggle" => "pill", :role => "tab", :type => "button"}
         =t('settings.billing')
+    .divider
     #v-pills-tabContent.tab-content.settings-tab
-      #v-pills-home.tab-pane.fade.show.active{"aria-labelledby" => "v-pills-home-tab", :role => "tabpanel"} 1
+      #v-pills-home.tab-pane.fade.show.active{"aria-labelledby" => "v-pills-home-tab", :role => "tabpanel"}
+        Setri
       #v-pills-profile.tab-pane.fade{"aria-labelledby" => "v-pills-profile-tab", :role => "tabpanel"} 2
       #v-pills-messages.tab-pane.fade{"aria-labelledby" => "v-pills-messages-tab", :role => "tabpanel"} 3
       #v-pills-settings.tab-pane.fade{"aria-labelledby" => "v-pills-settings-tab", :role => "tabpanel"} .4
