--- a/app/assets/stylesheets/components/settings.scss
+++ b/app/assets/stylesheets/components/settings.scss
@@ -1,7 +1,21 @@
 .settings-tabs{
   padding-top: 1rem;
   .settings-tab{
+    padding-left: 0.5rem !important;
     padding-top: 0.5rem !important;
+    justify-content: space-between;
+    background-color: red !important;
+  }
+  .divider{
+    @media (min-width: 768px) { 
+      border-right: 1px var(--divide-color) solid;
+      border-bottom: 0 !important;
+      height: 10rem ;
+      // margin-bottom: 0!important;
+    }
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
+    border-bottom: 1px var(--divide-color) solid;
   }
   button{
     text-align: left;
