--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -35,7 +35,7 @@
           %svg.active{:height => "40", :width => "40", :xmlns => "http://www.w3.org/2000/svg"}
             %path{:d => "m33.083 35-10.75-10.75q-1.291 1.042-3.041 1.625t-3.542.583q-4.542 0-7.688-3.125-3.145-3.125-3.145-7.666 0-4.5 3.145-7.625 3.146-3.125 7.646-3.125t7.646 3.125q3.146 3.125 3.146 7.625 0 1.833-.562 3.521-.563 1.687-1.646 3.02L35.083 33ZM15.708 23.625q3.375 0 5.667-2.292 2.292-2.291 2.292-5.666 0-3.334-2.292-5.646-2.292-2.313-5.667-2.313t-5.666 2.313Q7.75 12.333 7.75 15.667q0 3.375 2.292 5.666 2.291 2.292 5.666 2.292Z"}
 
-    -if current_page?(profile_path) || current_page?(settings_path) || current_page?(language_and_theme_path)
+    -if is_profile_path?()
       .col-3
         - if user_signed_in?
           = link_to profile_path do
@@ -92,7 +92,7 @@
                   %svg{:height => "40", :width => "40", :xmlns => "http://www.w3.org/2000/svg"}
                     %path{:d => "M32.625 33.583 22.042 23q-1.25 1.083-2.875 1.667-1.625.583-3.292.583-4 0-6.771-2.75t-2.771-6.708q0-4 2.771-6.75t6.729-2.75q3.959 0 6.75 2.75 2.792 2.75 2.792 6.708 0 1.75-.625 3.396T23.042 22l10.625 10.542Zm-16.75-9.75q3.375 0 5.729-2.333t2.354-5.75q0-3.375-2.354-5.729t-5.729-2.354q-3.417 0-5.771 2.354T7.75 15.75q0 3.417 2.354 5.75t5.771 2.333Z"}
           .separate-line
-          -if current_page?(profile_path) || current_page?(settings_path) || current_page?(language_and_theme_path)
+          -if is_profile_path?()
             %py-3.active.link
               .circle
                 -if user_signed_in?
