--- a/app/assets/stylesheets/components/buttons.scss
+++ b/app/assets/stylesheets/components/buttons.scss
@@ -7,6 +7,9 @@
     border-radius: 4px;
     font-weight: bold !important;
     font-size: .875rem;
+    &.save_button{
+        height: 2.5rem !important;
+    }
 }
 
 .button-provider{
